# hadoop-20

./: .arcconfig  .gitignore  CHANGES.txt  FB-CHANGES.txt  NOTICE.txt  README.txt  build.xml  copy-hdfs-jars-to-maven.sh  edit_generated_pom.py  ivy.xml
conf/: core-site.xml  hadoop-env.sh  hadoop-env.sh.template  hdfs-site.xml.template  log4j.properties  log4j.properties.scribeappender  mapred-site.xml.template
federation-11012011/: ivy.xml
federation-11012011/src/c++/libhdfs/: hdfs_test.c
federation-11012011/src/c++/pipes/: configure
federation-11012011/src/contrib/: build-contrib.xml  build.xml
federation-11012011/src/contrib/benchmark/: build.xml
federation-11012011/src/mapred/: mapred-default.xml
federation-11012011/src/native/: Makefile.am  config.h.in  configure.ac
hdfs-autoconf/: README.md  avatar-datanode-start  avatar-format  avatar-one-start  avatar-zero-start  build.sh  config.sh  start-dev-cluster.sh  stop-dev-cluster.sh  zookeeper.sh
hdfs-autoconf/config-meta/: avatar-datanode-1.sed  avatar-datanode-2.sed  avatar-datanode.template  avatar-one.sed  avatar-shared.sed  avatar-zero.sed
hdfs-autoconf/config-templates/: avatar-site.xml.template  core-site.xml.template  format-avatardatanode.sh.template  format-avatarnode-local-dir.sh.template  format-avatarnode-shared-dir.sh.template  hadoop-env-avatar-one.sh  hadoop-env-avatar-zero.sh  hadoop-env-datanode.sh  hdfs-site.xml.template  run-datanode.sh  run-one.template  run-zero.template
hdfs-autoconf/scripts/: common.sh  gen-avatar  gen-datanode
ivy/: hadoop-core.pom  libraries.properties
nativelib/lz4/lz4/lz4/: bench.c  (+5 more)
singleNodeHadoop/: singleNodeSwitch.sh
singleNodeHadoop/coronaConf/: corona.xml  coronapools.xml  hadoop-metrics.properties  mapred-site.xml
singleNodeHadoop/mapredConf/: core-site.xml  corona.xml  hadoop-env.sh  hadoop-metrics.properties  mapred-site.xml  pools.xml
src/: saveVersion.sh  saveVersion.sh.orig
src/benchmarks/mstress/: MStress_Client.java  Makefile  README  README.fb  mstress.py  mstress_cleanup.py  mstress_client.cc  mstress_initialize.sh  mstress_plan.py  mstress_prepare_master_clients.sh  mstress_run.py  mstress_sample_run.sh
src/c++/libhdfs/: hdfs.c  hdfs.h  hdfsJniHelper.c
src/c++/pipes/: Makefile.in  aclocal.m4
src/c++/utils/: Makefile.in  configure
src/contrib/: build-contrib.xml  build.xml
src/contrib/benchmark/: ivy.xml
src/contrib/capacity-scheduler/: ivy.xml
src/contrib/corona/: README.txt  build.xml  ivy.xml
src/contrib/data_join/: ivy.xml
src/contrib/dynamicclouds/: build.xml  ivy.xml
src/contrib/fairscheduler/: ivy.xml
src/contrib/fsshellservice/: build.xml  ivy.xml
src/contrib/gridmix/: ivy.xml
src/contrib/highavailability/: build.xml  ivy.xml
src/contrib/hive-streaming/: ivy.xml
src/contrib/hmon/: README
src/contrib/index/: ivy.xml
src/contrib/mumak/: build.xml  ivy.xml
src/contrib/namespace-notifier/: build.xml  ivy.xml
src/contrib/raid/: README  build.xml  ivy.xml
src/contrib/seekablecompression/: build.xml  ivy.xml
src/contrib/simulator/: build.xml  hadoop-split-blocks  startup
src/contrib/snapshot/: ivy.xml
src/contrib/storageservice/: build.xml  ivy.xml
src/contrib/streaming/: build.xml  ivy.xml
src/contrib/test/: core-site.xml
src/contrib/thriftdatanode/: README  build.xml
src/contrib/thriftfs/: build.xml
src/core/: core-default.xml
src/examples/pipes/: Makefile.in  aclocal.m4  configure
src/hdfs/: hdfs-default.xml
src/mapred/: mapred-default.xml
src/native/: Makefile.am  Makefile.in  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  packageNativeHadoop.sh
src/native/lib/: Makefile.am  Makefile.in
src/native/lib/cgroup/src/: README  org_apache_hadoop_mapred_CGroupEventListener.c  org_apache_hadoop_mapred_CGroupEventListener.h
src/native/lib/userGroupInfo/: Makefile  org_apache_hadoop_hdfs_nfs_nfs4_UserIDMapperSystem.c  org_apache_hadoop_hdfs_nfs_nfs4_UserIDMapperSystem.h
src/native/src/org/apache/hadoop/io/compress/lz4/: Lz4Compressor.c  Lz4Decompressor.c  Makefile.am  Makefile.in  lz4hc.c  lz4hc_encoder.h  org_apache_hadoop_io_compress_lz4_Lz4Compressor.h  org_apache_hadoop_io_compress_lz4_Lz4Decompressor.h
src/native/src/org/apache/hadoop/io/compress/snappy/: Makefile.am  Makefile.in  org_apache_hadoop_io_compress_snappy_SnappyCompressor.h
src/test/: core-site.xml
src/webapps/datanode/: browseBlock.jsp  browseDirectory.jsp  tail.jsp
src/webapps/hdfs/: corrupt_files.jsp  decommission.jsp  dfsclusterhealth.jsp  dfshealth.jsp  dfsnodelist.jsp  dfsnodelist_txt.jsp  nn_browsedfscontent.jsp
src/webapps/job/: jobcompletionevents.jsp  jobdetails.jsp  jobdetailsjson.jsp  jobhistory.jsp  joblogs.jsp  jobtaskshistory.jsp  jobtracker.jsp  jobtracker_hmon.jsp  jobtracker_txt.jsp  locality.jsp  machines.jsp  machines_txt.jsp  taskdetails.jsp
src/webapps/qjm/: index.html  qjmstatus.jsp
src/webapps/static/: cm.js  cm_old.js  jqueryThemeRoller.js
src/webapps/task/: tasktracker.jsp
trunk/: YAHOO-CHANGES.txt  build.xml  git-template.txt
trunk/conf/: hadoop-env.sh.template
trunk/ivy/: hadoop-core.pom  ivysettings.xml
trunk/singleNodeHadoop/coronaConf/: corona.xml  hadoop-env.sh  mapred-site.xml
trunk/singleNodeHadoop/mapredConf/: mapred-site.xml  pools.xml
trunk/src/contrib/: build.xml
trunk/src/hdfs/: hdfs-default.xml
trunk/src/native/: Makefile.in  packageNativeHadoop.sh
(+2395 files in other folders)
